--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -2450,6 +2450,8 @@ body{
 
 body {
     scrollbar-width: none !important;
+    max-width: 100vw !important;
+    overflow-x: hidden !important;
 
 }
 
